FullQa New/src/Geopointe/objects/Route__c.object
<CustomObject>
    <description>Instances of a Route used by the Geopointe application.  Routes can be saved or just held here temporarily.  The temporary ones will be periodically cleaned up.</description>
    <fields>
        <fullName>Avoid_Highways__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Google Only</inlineHelpText>
        <label>Avoid Highways</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Avoid_Tolls__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>MapQuest Only</inlineHelpText>
        <label>Avoid Tolls</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Calendar_Route__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, this route was generated from the calendar. This field is maintained systematically and should not be manually changed.</inlineHelpText>
        <label>Calendar Route</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <inlineHelpText>The date this route is scheduled for.</inlineHelpText>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Draggable__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Draggable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Locations_1__c</fullName>
        <label>Locations 1</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Locations_2__c</fullName>
        <label>Locations 2</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Locations_3__c</fullName>
        <label>Locations 3</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Mapping_Provider__c</fullName>
        <label>Mapping Provider</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>MapQuest</fullName>
                </value>
                <value>
                    <fullName>Google</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_Stops__c</fullName>
        <inlineHelpText>Includes start and end</inlineHelpText>
        <label>Number of Stops</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Optimized__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Optimized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Route_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Route Plan</label>
        <referenceTo>GP_Route_Plan__c</referenceTo>
        <relationshipName>GP_Routes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Route_Stop_Optimization__c</fullName>
        <label>Route Stop Optimization</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Distance</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Schedule</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Route_Type__c</fullName>
        <label>Route Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>fastest</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>shortest</fullName>
                </value>
                <value>
                    <fullName>pedestrian</fullName>
                </value>
                <value>
                    <fullName>multimodal</fullName>
                </value>
                <value>
                    <fullName>bicycle</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Route_Window_End_Time__c</fullName>
        <label>Route Window End Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Route_Window_Start_Time__c</fullName>
        <label>Route Window Start Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Temporary__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Indicates that this is used by the system as a temporary record. It is not intended to be saved long-term. The system will periodically clean these records up.</inlineHelpText>
        <label>Temporary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Thumb_Maps__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>MapQuest only</inlineHelpText>
        <label>Thumb Maps</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Distance_km__c</fullName>
        <label>Total Distance (km)</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Distance_mi__c</fullName>
        <label>Total Distance (mi)</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Time__c</fullName>
        <label>Total Time (min)</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Units__c</fullName>
        <label>Units</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>m</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>k</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Geopointe Route</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Routes</fullName>
        <columns>NAME</columns>
        <columns>Temporary__c</columns>
        <columns>Mapping_Provider__c</columns>
        <columns>Route_Type__c</columns>
        <columns>Avoid_Highways__c</columns>
        <columns>Avoid_Tolls__c</columns>
        <columns>Thumb_Maps__c</columns>
        <columns>Units__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Locations_1__c</columns>
        <columns>Locations_2__c</columns>
        <columns>Locations_3__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Routes</label>
    </listViews>
    <nameField>
        <label>Route Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Geopointe Routes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <sharingReasons>
        <fullName>Manual_Share__c</fullName>
        <label>Geopointe Manual Share</label>
    </sharingReasons>
</CustomObject>